Extra spacing in grid and fix broken shape divider

--- a/frontend/src/components/event-card/container.scss
+++ b/frontend/src/components/event-card/container.scss
@@ -11,8 +11,8 @@
 .custom-shape-divider svg {
     position: relative;
     display: block;
-    width: calc(100% + 0.2px);
-    height: 30px;
+    width: calc(100% + 0px);
+    height: 35px;
 }
 
 .custom-shape-divider .shape-fill {
